Fix masonry layout issue

--- a/assets/css/src/material-components.css
+++ b/assets/css/src/material-components.css
@@ -12,6 +12,7 @@
 
 /* @todo move to own file */
 .mdc-image-list__item-wrap {
+	display: block;
 	text-decoration: none !important;
 }
 
